# Flappy-Smiley

./: .gitattributes  .gitignore  Application.cpp  Bird.cpp  Bird.h  CMakeLists.txt  Constants.h  Draw.cpp  Draw.h  Game.cpp  Game.h  GameObject.h  Pipe.cpp  Pipe.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h
.github/workflows/: cmake.yml
includes/glad/: glad.h
res/res/shaders/: Rect.vs.glsl  fs.glsl  vs.glsl
res/shaders/: Rect.fs.glsl
third_party_source/: glad.c
